@@ -1,5 +1,5 @@
 #
-# This file is included by FindQt1.cmake, don't include it directly.
+# This file is included by FindQt2.cmake, don't include it directly.
 
 #=============================================================================
 # Copyright 2005-2009 Kitware, Inc.
@@ -21,37 +21,37 @@
 ######################################
 
 
-macro (QT1_EXTRACT_OPTIONS _qt1_files _qt1_options _qt1_target)
-  set(${_qt1_files})
-  set(${_qt1_options})
-  set(_QT1_DOING_OPTIONS FALSE)
-  set(_QT1_DOING_TARGET FALSE)
+macro (QT2_EXTRACT_OPTIONS _qt2_files _qt2_options _qt2_target)
+  set(${_qt2_files})
+  set(${_qt2_options})
+  set(_QT2_DOING_OPTIONS FALSE)
+  set(_QT2_DOING_TARGET FALSE)
   foreach(_currentArg ${ARGN})
     if ("x${_currentArg}" STREQUAL "xOPTIONS")
-      set(_QT1_DOING_OPTIONS TRUE)
+      set(_QT2_DOING_OPTIONS TRUE)
     elseif ("x${_currentArg}" STREQUAL "xTARGET")
-      set(_QT1_DOING_TARGET TRUE)
+      set(_QT2_DOING_TARGET TRUE)
     else ()
-      if(_QT1_DOING_TARGET)
-        set(${_qt1_target} "${_currentArg}")
-      elseif(_QT1_DOING_OPTIONS)
-        list(APPEND ${_qt1_options} "${_currentArg}")
+      if(_QT2_DOING_TARGET)
+        set(${_qt2_target} "${_currentArg}")
+      elseif(_QT2_DOING_OPTIONS)
+        list(APPEND ${_qt2_options} "${_currentArg}")
       else()
-        list(APPEND ${_qt1_files} "${_currentArg}")
+        list(APPEND ${_qt2_files} "${_currentArg}")
       endif()
     endif ()
   endforeach()
 endmacro ()
 
-macro (QT1_WRAP_HEADER outfiles )
-  QT1_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
+macro (QT2_WRAP_HEADER outfiles )
+  QT2_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
 
   foreach (it ${ui_files})
     get_filename_component(outfile ${it} NAME_WE)
     set(infile ${CMAKE_CURRENT_SOURCE_DIR}/${outfile}.h)
     set(outfile ${CMAKE_CURRENT_BINARY_DIR}/${outfile}.moc)
     add_custom_command(OUTPUT ${outfile}
-      COMMAND /opt/qt1/bin/moc
+      COMMAND /opt/qt2/bin/moc
       ARGS ${infile} -o ${outfile}
       MAIN_DEPENDENCY ${infile} VERBATIM)
   list(APPEND ${outfiles} ${outfile})
@@ -59,15 +59,15 @@ macro (QT1_WRAP_HEADER outfiles )
 
 endmacro ()
 
-macro (QT1_WRAP_MOC outfiles )
-  QT1_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
+macro (QT2_WRAP_MOC outfiles )
+  QT2_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
 
   foreach (it ${ui_files})
     get_filename_component(filename ${it} NAME_WE)
     set(outfile ${CMAKE_CURRENT_BINARY_DIR}/${filename}.moc)
     set(infile ${CMAKE_CURRENT_SOURCE_DIR}/${filename}.h)
     add_custom_command(OUTPUT ${outfile}
-      COMMAND /opt/qt1/bin/moc
+      COMMAND /opt/qt2/bin/moc
       ARGS ${infile} -o ${outfile}
       MAIN_DEPENDENCY ${infile} VERBATIM)
     list(APPEND ${outfiles} ${outfile})
@@ -76,15 +76,15 @@ macro (QT1_WRAP_MOC outfiles )
   #add_custom_target(moc_ALL ALL DEPENDS ${outfiles})
 endmacro ()
 
-macro (QT1_WRAP_CPP outfiles )
-  QT1_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
+macro (QT2_WRAP_CPP outfiles )
+  QT2_EXTRACT_OPTIONS(ui_files ui_options ui_target ${ARGN})
 
   foreach (it ${ui_files})
     get_filename_component(filename ${it} NAME_WE)
     set(outfile ${CMAKE_CURRENT_BINARY_DIR}/${filename}.moc.cpp)
     set(infile ${CMAKE_CURRENT_SOURCE_DIR}/${filename}.h)
     add_custom_command(OUTPUT ${outfile}
-      COMMAND /opt/qt1/bin/moc
+      COMMAND /opt/qt2/bin/moc
       ARGS ${infile} -o ${outfile}
       MAIN_DEPENDENCY ${infile} VERBATIM)
     list(APPEND ${outfiles} ${outfile})
