@@ -152,7 +152,7 @@ kdelibs (2:980312-4) frozen; urgency=low
   * moved all unnecessary files out of -dev
   * moved the symbolic link default->en to kdelibs, where it belongs
   * fixed the shlibs format
-  * new qt1g release (1.33)
+  * new qt2g release (1.33)
 
  -- Stephan Kulow <coolo@kde.org>  Tue, 31 Mar 1998 13:00:00 +0100   
 
