@@ -1,3 +1,7 @@
+2022-01-02 Alec Bloss <hopefullifetwo@gmail.com>
+
+	* Fix CMake files to be compatible with Qt2
+
 1999-08-07  Bernhard Rosenkraenzer <bero@ms-windows-2000.com>
 
 	* Makefile.cvs: Work around an autoconf bug preventing from
